.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpouch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpouch
  template:
    metadata:
      labels:
        app: mailpouch
    spec:
      containers:
      - name: mailpouch-app
        image: us-central1-docker.pkg.dev/mailpouch-364912/mailpouch/mailpouch-gke:latest
      readinessProbe:
        httpGet:
          path: /robots.txt
          port: 3000
          scheme: HTTP
        ports:
        - containerPort: 8080
